[gd_scene load_steps=12 format=3 uid="uid://bcavmedvv7ixd"]

[ext_resource type="PackedScene" uid="uid://c8augt8na75pj" path="res://Sun.tscn" id="1_3evlm"]
[ext_resource type="PackedScene" uid="uid://bikyg3dc6rmqf" path="res://HUD.tscn" id="1_akrkt"]
[ext_resource type="Script" path="res://scripts/MouseBar.gd" id="2_7purf"]
[ext_resource type="PackedScene" uid="uid://dcspjthu713gd" path="res://SunEnergyManager.tscn" id="2_y7a5h"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0hwuq"]

[sub_resource type="Gradient" id="Gradient_etd4f"]
offsets = PackedFloat32Array(0.432258)
colors = PackedColorArray(0.333333, 0.12549, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8p3oh"]
gradient = SubResource("Gradient_etd4f")
width = 350

[sub_resource type="Gradient" id="Gradient_x811r"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.237539, 0.237539, 0.237539, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_eqx6h"]
gradient = SubResource("Gradient_x811r")

[sub_resource type="Gradient" id="Gradient_s6sfx"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.341682, 0.491509, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tjjaf"]
gradient = SubResource("Gradient_s6sfx")

[node name="Main" type="Node2D"]
material = SubResource("CanvasItemMaterial_0hwuq")
position = Vector2(10, 10)

[node name="HUD" parent="." instance=ExtResource("1_akrkt")]

[node name="Buttons" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MouseUpgrade" type="Button" parent="HUD/Buttons"]
layout_mode = 0
offset_left = 8.0
offset_top = 200.0
offset_right = 366.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 25
text = "  Melhorar o mouse"
icon = SubResource("GradientTexture2D_8p3oh")
flat = true
alignment = 0
icon_alignment = 1

[node name="Price" type="Label" parent="HUD/Buttons/MouseUpgrade"]
layout_mode = 0
offset_left = 248.0
offset_top = 16.0
offset_right = 336.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 30
text = "10"
horizontal_alignment = 2

[node name="WindPowerBuy" type="Button" parent="HUD/Buttons"]
layout_mode = 0
offset_left = 8.0
offset_top = 280.0
offset_right = 366.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 25
text = "  Comprar usína eólica"
icon = SubResource("GradientTexture2D_8p3oh")
flat = true
alignment = 0
icon_alignment = 1

[node name="Price" type="Label" parent="HUD/Buttons/WindPowerBuy"]
layout_mode = 0
offset_left = 248.0
offset_top = 16.0
offset_right = 336.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 30
text = "25"
horizontal_alignment = 2

[node name="MouseBar" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 656.0
offset_top = 440.0
offset_right = 696.0
offset_bottom = 480.0
script = ExtResource("2_7purf")

[node name="Background" type="NinePatchRect" parent="HUD/MouseBar"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 26.0
offset_bottom = 98.0
texture = SubResource("GradientTexture1D_eqx6h")

[node name="HowFull" type="NinePatchRect" parent="HUD/MouseBar"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 96.0
texture = SubResource("GradientTexture1D_tjjaf")

[node name="SunEnergyManager" parent="." instance=ExtResource("2_y7a5h")]
sunTotal = 100

[node name="Sun" parent="." instance=ExtResource("1_3evlm")]
position = Vector2(731, 400)

[connection signal="button_down" from="HUD/Buttons/MouseUpgrade" to="SunEnergyManager" method="_on_mouse_upgrade_button_down"]
[connection signal="button_down" from="HUD/Buttons/WindPowerBuy" to="SunEnergyManager" method="_on_wind_power_buy_button_down"]
[connection signal="buildingBought" from="SunEnergyManager" to="HUD" method="_on_sun_energy_manager_building_bought"]
[connection signal="mouseBought" from="SunEnergyManager" to="HUD" method="_on_sun_energy_manager_mouse_bought"]
[connection signal="sunTick" from="SunEnergyManager" to="HUD" method="_on_sun_energy_manager_sun_tick"]
[connection signal="sunTime" from="SunEnergyManager" to="HUD/MouseBar" method="_on_sun_energy_manager_sun_time"]
[connection signal="mouse_entered" from="Sun" to="HUD/MouseBar" method="_on_sun_mouse_entered"]
[connection signal="mouse_exited" from="Sun" to="HUD/MouseBar" method="_on_sun_mouse_exited"]
